# LaserCars_Pico

./: .gitignore  CMakeLists.txt  LaserCar.cpp  PowerDebugNotes.md  README.md  change_name.py
Models/: Base.3mf  Hat.3mf
lib/: CMakeLists.txt  Constants.h  Debug.h
lib/BTController/: BTController.cpp  BTController.h  CMakeLists.txt  btstack_config.h  laser_car.gatt
lib/Drive/: CMakeLists.txt  Drive.cpp  Drive.h
lib/DriveController/: CMakeLists.txt  DriveController.cpp  DriveController.h
lib/FireController/: CMakeLists.txt  FireController.cpp  FireController.h
lib/IRReceiver/: CMakeLists.txt  IRReceiver.cpp  IRReceiver.h  IRReceiver.pio
lib/IRRxGroup/: CMakeLists.txt  IRRxGroup.cpp  IRRxGroup.h  nec_receive.pio
lib/IRSender/: CMakeLists.txt  IRSender.cpp  IRSender.h  IRSender_burst.pio  IRSender_control.pio
lib/LightController/: CMakeLists.txt  LightController.cpp  LightController.h
lib/LightController/Animations/: CMakeLists.txt
lib/LightController/Animations/Animation/: Animation.cpp  Animation.h  CMakeLists.txt
lib/LightController/Animations/ConnectedAnimation/: CMakeLists.txt  ConnectedAnimation.cpp  ConnectedAnimation.h
lib/LightController/Animations/ConnectingAnimation/: CMakeLists.txt  ConnectingAnimation.cpp  ConnectingAnimation.h
lib/LightController/Animations/DeathAnimation/: CMakeLists.txt  DeathAnimation.cpp  DeathAnimation.h
lib/LightController/Animations/HitAnimation/: CMakeLists.txt  HitAnimation.cpp  HitAnimation.h
lib/WeaponController/: CMakeLists.txt  WeaponController.cpp  WeaponController.h
lib/nec_transmit_library/: CMakeLists.txt  nec_transmit.cpp
lib/pico_neopixel/: Adafruit_NeoPixel.cpp  CMakeLists.txt
lib/pico_neopixel/include/: Adafruit_NeoPixel.h
pico_neopixel/: Adafruit_NeoPixel.cpp
